style.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Segoe-UI', sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    height: 100vh;
    background-color: black;
    overflow: hidden;
}

.startPc {
    width: 85px;
    height: 95px;
    background-image: url('https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Vector%20Icons/Taskbar/Shutdown.webp?raw=true');
    background-size: 115px 115px;
    background-color: rgba(70, 70, 70, 0.6);
    border: none;
    padding: 10px 15px;
    border-radius: 7px;
    left: 100px;
    top: 100px;
}

@keyframes fadeInOut {
    0% {
        opacity: 0;
    }

    50% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

.lockflex {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.passflex {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
    opacity: 0;
    transition: transform 0.4s ease-in-out, filter 0.3s ease-in-out, scale 0.4s ease-in-out, opacity 0.15s ease-in-out;
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100%;
    align-items: center;
    filter: blur(0px);
    scale: 1;
}

.passflex.sldo {
    opacity: 1;
    transition: transform 0.4s ease-in-out, filter 0.3s ease-in-out, scale 0.4s ease-in-out, opacity 0.65s ease-in-out;
}

.inputflex {
    position: static;
    display: flex;
    margin-bottom: 15px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 160px;
    height: 35px;
}

.timeText {
    position: absolute;
    display: flex;
    align-items: center;
    flex-direction: column;
    font-weight: bold;
    color: white;
    font-size: 60px;
    top: 60px;
    justify-content: top;
    scale: 1;
    transition: transform 0.4s ease-in-out, scale 0.4s ease-in-out;
    filter: blur(0px);
    text-shadow: 0 8px 15px rgba(0, 0, 0, 0.8);
}

.dateText {
    position: relative;
    font-weight: bold;
    color: white;
    font-size: 15px;
    top: 1px;
    text-shadow: 0 8px 15px rgba(0, 0, 0, 0.8);
}

#User_Icon {
    position: static;
    margin-bottom: 10px;
    width: 100px;
    height: 100px;
    background: url('https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Default%20Profile%20Photo.webp?raw=true');
    background-size: cover;
    background-position: center;
    border-radius: 50px;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
}

.pass {
    width: 100px;
    height: 20px;
    border-radius: 6px;
    background-color: rgba(255, 255, 255, 0.15);
    color: white;
    outline: none;
    text-align: right;
    padding: 8px;
    border: 0px;
    outline: none;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    margin: 0px;
    font-size: 1rem;
    border: 1px solid #00aaff;
    text-align: center;
}

input.pass {
    outline: none !important;
    border: none !important;
}

input.pass:focus {
    outline: none !important;
    border: none !important;
}

input.pass:active,
input.pass:visited,
input.pass:hover {
    outline: none !important;
    border: none !important;
    border: 1px solid transparent;
}

.passhint {
    position: static;
    margin: 0px;
    font-size: 10px;
    color: white;
    font-weight: bold;
}

.username {
    position: static;
    margin-bottom: 20px;
    color: white;
    font-weight: bold;
}

.unlock {
    width: 40px;
    height: 36px;
    border-radius: 6px;
    flex-shrink: 0;
    font-weight: bold;
    text-align: center;
    border: none;
    color: white;
    background-color: rgba(255, 255, 255, 0.15);
    -webkit-tap-highlight-color: transparent;
    transition: background-color 0.2s ease;
    margin: 0px;
    padding: 8px;
    font-size: 1rem;
}

.unlock:hover {
    background-color: rgba(50, 50, 50, 0.4);
    transition: background-color 0.2s ease;
}

.tex {
    position: absolute;
    bottom: 50px;
    font-weight: bold;
    font-size: 21px;
    color: white;
    text-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
    scale: 1;
    transition: transform 0.4s ease-in-out, scale 0.4s ease-in-out;
}

.monitor-container {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 400px;
    background-color: black;
    background-size: cover;
}

#loading_screen {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    transition: opacity 1.5s ease;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
    font-size: 20px;
}

.loading {
    display: block;
    position: relative;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    border: 0.3rem solid rgba(255, 255, 255, 0);
    border-top-color: #ffffff;
    animation: spin 1s infinite linear;
    margin-top: 100px;
    margin-bottom: 20px;
}

.loading .edge {
    display: block;
    position: absolute;
    border-radius: 50%;
    width: 0.32rem;
    height: 0.32rem;
    background: #fff;
}

.loading .edge.edge-left {
    top: 0.15rem;
    left: 0.07rem;
}

.loading .edge.edge-right {
    top: 0.15rem;
    right: 0.07rem;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    50% {
        transform: rotate(270deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

.load-status-text {
    position: absolute;
    top: 350px;
    color: white;
    justify-content: center;
}

.screen {
    position: absolute;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #000000;
    opacity: 0;
    transition: opacity 1s ease-in-out;
    pointer-events: none;
}

.screen.hid {
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    pointer-events: none;
}
/* ... */

